--- a/UserManagementMVCExample/Views/ShoppingCart/Index.cshtml
+++ b/UserManagementMVCExample/Views/ShoppingCart/Index.cshtml
@@ -169,11 +169,11 @@
         <td>
             @if(Model.CartTotal == "0 лв.")
             {
-                <button asp-controller="Order" asp-action="MakeAnOrder" type="button" class="btn btn-primary" disabled>Checkout</button>
+                <button asp-controller="Order" asp-action="Payment" type="button" class="btn btn-primary" disabled>Checkout</button>
             }
             else
             {
-                <a asp-controller="Order" asp-action="MakeAnOrder" type="button" class="btn btn-primary">Checkout</a>
+                <a asp-controller="Order" asp-action="Payment" type="button" class="btn btn-primary">Checkout</a>
             }
         </td>
     </tr>
