--- a/UserManagementMVCExample/Views/Home/Index.cshtml
+++ b/UserManagementMVCExample/Views/Home/Index.cshtml
@@ -1,9 +1,179 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="keywords" content="​Author&amp;apos;s cake and desserts for your holiday, ​Few words about myself, ​Catalog, How We Work, Facts &amp;amp; Questions, ​​Best Choice, ​Make an order">
+    <meta name="description" content="">
+    <title>Page 2</title>
+    <link rel="stylesheet" href="/css/nicepage.css" media="screen">
+    <link rel="stylesheet" href="/css/Page-2.css" media="screen">
+    <script class="u-script" type="text/javascript" src="/js/jquery-1.9.1.min.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="/js/nicepage.js" defer=""></script>
+    <meta name="generator" content="Nicepage 5.4.0, nicepage.com">
+    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to Lotus Sushi</h1>
-    <i>Delivering happiness to your home.</i>
-    <p>Lotus Sushi is a sample ASP.NET Core Web Application for sushi delivery.</p>
-</div>
+
+
+
+
+
+    <script type="application/ld+json">
+        {
+                "context": "http://schema.org",
+                "type": "Organization",
+                "name": ""
+        }</script>
+    <meta name="theme-color" content="#478ac9">
+    <meta property="og:title" content="Page 2">
+    <meta property="og:type" content="website">
+    <meta data-intl-tel-input-cdn-path="intlTelInput/">
+</head>
+<body data-home-page="https://website3926996.nicepage.io/Page-2.html?version=f9b4e471-2c75-4e48-8da5-5082b7277661" data-home-page-title="Page 2" class="u-body u-xl-mode" data-lang="en">
+    <section class="u-clearfix u-white u-section-1" id="sec-8f5b">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+                <div class="u-layout">
+                    <div class="u-layout-row">
+                        <div class="u-container-align-right-xl u-container-style u-layout-cell u-size-30 u-layout-cell-1">
+                            <div class="u-container-layout u-container-layout-1">
+                                <h1 class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-custom-font u-font-montserrat u-text u-text-default-xl u-text-1">
+                                    Lotus Sushi<span style="font-weight: 400;">
+                                        <br>Restaurant
+                                    </span>
+                                </h1>
+                                <h4 class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-custom-font u-font-montserrat u-text u-text-default u-text-2">Delivering happiness to your home</h4>
+                                <a asp-controller="ProductsMenu" asp-action="Index" class="u-align-center-sm u-align-center-xs u-align-right-lg u-align-right-md u-align-right-xl u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-2 u-radius-50 u-btn-1">Menu</a>
+                            </div>
+                        </div>
+                        <div class="u-container-align-center u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="833" data-image-height="1000">
+                            <div class="u-container-layout u-container-layout-2"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="u-clearfix u-palette-3-light-3 u-section-3" id="carousel_2204">
+        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+            <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
+                <div class="u-layout">
+                    <div class="u-layout-row">
+                        <div class="u-container-style u-image u-layout-cell u-size-30 u-image-1" data-image-width="2967" data-image-height="2967">
+                            <div class="u-container-layout u-valign-middle-md u-valign-top-sm u-valign-top-xs u-container-layout-1"></div>
+                        </div>
+                        <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-2">
+                            <div class="u-container-layout u-valign-middle u-container-layout-2">
+                                <h2 class="u-align-left u-custom-font u-font-montserrat u-text u-text-default u-text-1">How We Work</h2>
+                                <div class="u-expanded-width u-list u-list-1">
+                                    <div class="u-repeater u-repeater-1">
+                                        <div class="u-container-style u-list-item u-repeater-item u-white u-list-item-1">
+                                            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+                                                <h3 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-2">01</h3>
+                                                <h6 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-3"> Goods order</h6>
+                                                <p class="u-text u-text-default u-text-4">You can order any product if you have an account</p>
+                                            </div>
+                                        </div>
+                                        <div class="u-container-style u-list-item u-repeater-item u-white u-list-item-2">
+                                            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4">
+                                                <h3 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-5">02</h3>
+                                                <h6 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-6"> Payment Confirmation</h6>
+                                                <p class="u-text u-text-default u-text-7">You can pay using credit card</p>
+                                            </div>
+                                        </div>
+                                        <div class="u-container-style u-list-item u-repeater-item u-white u-list-item-3">
+                                            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5">
+                                                <h3 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-8">03</h3>
+                                                <h6 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-9"> Delivery</h6>
+                                                <p class="u-text u-text-default u-text-10">Free delivery</p>
+                                            </div>
+                                        </div>
+                                        <div class="u-container-style u-list-item u-repeater-item u-white u-list-item-4">
+                                            <div class="u-container-layout u-similar-container u-valign-top u-container-layout-6">
+                                                <h3 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-11">04</h3>
+                                                <h6 class="u-custom-font u-font-montserrat u-text u-text-custom-color-2 u-text-default u-text-12"> Confirmation</h6>
+                                                <p class="u-text u-text-default u-text-13">We will let you know what the status of your order is</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="u-align-center u-clearfix u-white u-section-4" id="carousel_de69">
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <h2 class="u-custom-font u-font-montserrat u-text u-text-black u-text-1">Facts &amp; Questions</h2>
+            <p class="u-text u-text-2"> Here are some frequently asked questions</p>
+            <div class="u-accordion u-collapsed-by-default u-expanded-width u-faq u-spacing-10 u-accordion-1">
+                <div class="u-accordion-item">
+                    <a class="u-accordion-link u-active-palette-3-light-3 u-button-style u-grey-5 u-hover-palette-3-light-3 u-text-active-black u-text-body-color u-accordion-link-1" id="link-accordion-f600" aria-controls="accordion-f600" aria-selected="false">
+                        <span class="u-accordion-link-text"> How to pay for an order?</span><span class="u-accordion-link-icon u-icon u-text-active-white u-text-hover-white u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 426.66667 426.66667" style=""><use xlink:href="#svg-b6d8"></use></svg><svg class="u-svg-content" viewBox="0 0 426.66667 426.66667" id="svg-b6d8"><path d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0"></path></svg></span>
+                    </a>
+                    <div class="u-accordion-pane u-container-style u-expanded-width u-white u-accordion-pane-1" id="accordion-f600" aria-labelledby="link-accordion-f600">
+                        <div class="u-container-layout u-container-layout-1">
+                            <div class="fr-view u-clearfix u-rich-text u-text">
+                                <p>You can pay online by using your credit card - Mastercard, Visa, American Express, Discover, Maestro, JCB and UnionPay</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-accordion-item">
+                    <a class="u-accordion-link u-active-palette-3-light-3 u-button-style u-grey-5 u-hover-palette-3-light-3 u-text-active-black u-text-body-color u-accordion-link-2" id="link-accordion-72f4" aria-controls="accordion-72f4" aria-selected="false">
+                        <span class="u-accordion-link-text"> How to see the details of my order?</span><span class="u-accordion-link-icon u-icon u-text-active-white u-text-hover-white u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 426.66667 426.66667" style=""><use xlink:href="#svg-b250"></use></svg><svg class="u-svg-content" viewBox="0 0 426.66667 426.66667" id="svg-b250"><path d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0"></path></svg></span>
+                    </a>
+                    <div class="u-accordion-pane u-container-style u-expanded-width u-white u-accordion-pane-2" id="accordion-72f4" aria-labelledby="link-accordion-72f4">
+                        <div class="u-container-layout u-container-layout-2">
+                            <div class="u-clearfix u-rich-text u-text">
+                                <p>Go to your account details. Click on the Orders link. Click the link Details of the exact order you want to see.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-accordion-item">
+                    <a class="u-accordion-link u-active-palette-3-light-3 u-button-style u-grey-5 u-hover-palette-3-light-3 u-text-active-black u-text-body-color u-accordion-link-3" id="link-accordion-854e" aria-controls="accordion-854e" aria-selected="false">
+                        <span class="u-accordion-link-text">Where is my order going to be delivered?</span><span class="u-accordion-link-icon u-icon u-text-active-white u-text-hover-white u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 426.66667 426.66667" style=""><use xlink:href="#svg-4779"></use></svg><svg class="u-svg-content" viewBox="0 0 426.66667 426.66667" id="svg-4779"><path d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0"></path></svg></span>
+                    </a>
+                    <div class="u-accordion-pane u-container-style u-expanded-width u-white u-accordion-pane-3" id="accordion-854e" aria-labelledby="link-accordion-854e">
+                        <div class="u-container-layout u-container-layout-3">
+                            <div class="fr-view u-clearfix u-rich-text u-text">
+                                <p>Your order is going to be delivered to the exact same address you have entered while doing the checkout of you order.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-accordion-item u-expanded-width">
+                    <a class="u-accordion-link u-active-palette-3-light-3 u-button-style u-grey-5 u-hover-palette-3-light-3 u-text-active-black u-text-body-color u-accordion-link-4" id="link-accordion-f600" aria-controls="accordion-f600" aria-selected="false">
+                        <span class="u-accordion-link-text">Do you deliver orders outside the town?</span><span class="u-accordion-link-icon u-icon u-text-active-white u-text-hover-white u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 426.66667 426.66667" style=""><use xlink:href="#svg-1e29"></use></svg><svg class="u-svg-content" viewBox="0 0 426.66667 426.66667" id="svg-1e29"><path d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0"></path></svg></span>
+                    </a>
+                    <div class="u-accordion-pane u-container-style u-expanded-width u-white u-accordion-pane-4" id="accordion-f600" aria-labelledby="link-accordion-f600">
+                        <div class="u-container-layout u-container-layout-4">
+                            <div class="fr-view u-clearfix u-rich-text u-text">
+                                <p>No, due to the fact that our restaurant is located in Plovdiv, we deliver only in Plovdiv district.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-accordion-item u-expanded-width">
+                    <a class="u-accordion-link u-active-palette-3-light-3 u-button-style u-grey-5 u-hover-palette-3-light-3 u-text-active-black u-text-body-color u-accordion-link-5" id="link-accordion-f600" aria-controls="accordion-f600" aria-selected="false">
+                        <span class="u-accordion-link-text"> Can i make a personal order for a special occasion?</span><span class="u-accordion-link-icon u-icon u-text-active-white u-text-hover-white u-icon-5"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 426.66667 426.66667" style=""><use xlink:href="#svg-58d2"></use></svg><svg class="u-svg-content" viewBox="0 0 426.66667 426.66667" id="svg-58d2"><path d="m405.332031 192h-170.664062v-170.667969c0-11.773437-9.558594-21.332031-21.335938-21.332031-11.773437 0-21.332031 9.558594-21.332031 21.332031v170.667969h-170.667969c-11.773437 0-21.332031 9.558594-21.332031 21.332031 0 11.777344 9.558594 21.335938 21.332031 21.335938h170.667969v170.664062c0 11.777344 9.558594 21.335938 21.332031 21.335938 11.777344 0 21.335938-9.558594 21.335938-21.335938v-170.664062h170.664062c11.777344 0 21.335938-9.558594 21.335938-21.335938 0-11.773437-9.558594-21.332031-21.335938-21.332031zm0 0"></path></svg></span>
+                    </a>
+                    <div class="u-accordion-pane u-container-style u-expanded-width u-white u-accordion-pane-5" id="accordion-f600" aria-labelledby="link-accordion-f600">
+                        <div class="u-container-layout u-container-layout-5">
+                            <div class="fr-view u-clearfix u-rich-text u-text u-text-7">
+                                <p>Yes, we do take personal orders but it must be made by phone call with our event manager at least two day prior the special occasion.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</body>
