--- a/UserManagementMVCExample/Views/Order/Index.cshtml
+++ b/UserManagementMVCExample/Views/Order/Index.cshtml
@@ -37,7 +37,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div id="snackbar">Order was deleted</div>
-
+    <h2 class="text-warning text-center">Your orders</h2>
 <table class="table">
     <tr>
         <th>Date</th>
