--- a/UserManagementMVCExample/Views/UserRoles/Manage.cshtml
+++ b/UserManagementMVCExample/Views/UserRoles/Manage.cshtml
@@ -28,7 +28,7 @@
             <input type="submit" value="Update" class="btn btn-primary"
                    style="width:auto" />
             <a asp-action="Index" asp-route-id="@ViewBag.userId"
-               class="btn btn-primary" style="width:auto">Cancel</a>
+               class="btn btn-secondary" style="width:auto">Cancel</a>
         </div>
     </div>
 </form>
